<resources>
    <string name="app_name">FridgeFu</string>
    <string name="lasagna_text"><font size="20sp">Lasagna</font>\n\<font size="10sp">10-15 minute cook time\n\2000 calories\n\8 servings</font></string>
    <string name="pbj_text"><font size="20sp">PBJ</font>\n\<font size="10sp">2-5 minute cook time\n\200 calories\n\1 servings</font></string>
    <string name="pbj2_text"><font size="20sp">PBJ2</font>\n\<font size="10sp">3 hour cook time\n\2000 calories\n\1 servings</font></string>
    <string name="grilled_cheese_text"><font size="20sp">Grilled Cheese Sandwich</font>\n\<font size="10sp">10-15 minute cook time\n\200 calories\n\1 servings</font></string>
    <string name="clear_list">Clear List</string>
    <string name="clear_fridge">Clear Fridge</string>
    <string name="add_ingredients">Add Ingredients</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="mz_cheese">mz_cheese</string>
    <string name="search">search</string>
    <string name="custom">custom</string>
    <string name="check_1">Include recipes that only have existing ingredients from your fridge.</string>
    <string name="check_2">Include recipes that have ingredients from your fridge and grocery list.</string>
    <string name="filter">Filter</string>
    <string name="newTitle">New Ingredient</string>
    <string name="nTButton">Add New Ingredient</string>
    <string name="expiration_date">Custom Expiration Date:</string>
    <string name="name">Name:</string>
    <string name="add_to_default">Add To Default Shopping List:</string>
    <string name="shop_title">New Shopping Item:</string>
    <string name="shopping_button">Add New Shopping Item</string>
</resources>
