<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="400dp"
    android:layout_height="260dp">

    <TextView
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/shop_title"
        android:textColor="@android:color/black"
        android:textSize="30sp">

    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:gravity="start"
            android:textSize="24sp"
            android:layout_marginStart="10dp"
            android:textColor="@android:color/background_dark"
            >

        </TextView>

        <EditText
            android:id="@+id/ing_name"
            android:layout_width="0dp"
            android:layout_weight="8"
            android:layout_height="wrap_content">

        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text="@string/add_to_default"
            android:layout_gravity="start"
            android:gravity="start"
            android:textSize="24sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@android:color/background_dark"
            >

        </TextView>

        <CheckBox
            android:id="@+id/add_to_default"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end">

        </CheckBox>
    </LinearLayout>


</LinearLayout>