<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="400dp"
    android:layout_height="350dp">

    <TextView
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:text="@string/newTitle"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_marginTop="15dp"
        android:textColor="@android:color/black"
        >

    </TextView>
    <TextView
        android:layout_width="74dp"
        android:layout_height="40dp"
        android:text="@string/name"
        android:layout_gravity="start"
        android:gravity="start"
        android:textSize="24sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:textColor="@android:color/background_dark"
        >

    </TextView>
    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="-40dp"
        android:layout_marginStart="90dp"
        >

    </EditText>

    <TextView
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:text="@string/expiration_date"
        android:layout_gravity="start"
        android:gravity="start"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textColor="@android:color/background_dark"
        >

    </TextView>


    <EditText
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginTop="-60dp"
        android:layout_marginStart="205dp"
        >

    </EditText>
    <ImageButton
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:src="@drawable/up_select"
        android:layout_marginTop="-70dp"
        android:layout_marginStart="205dp"

        >

    </ImageButton>
    <ImageButton
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:src="@drawable/down_select"
        android:layout_marginTop="40dp"
        android:layout_marginStart="205dp"

        >

    </ImageButton>
    <EditText
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginTop="-70dp"
        android:layout_marginStart="265dp"
        >

    </EditText>
    <ImageButton
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:src="@drawable/up_select"
        android:layout_marginTop="-70dp"
        android:layout_marginStart="265dp"

        >

    </ImageButton>
    <ImageButton
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:src="@drawable/down_select"
        android:layout_marginTop="40dp"
        android:layout_marginStart="265dp"

        >

    </ImageButton>
    <EditText
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginTop="-70dp"
        android:layout_marginStart="325dp"
        >

    </EditText>
    <ImageButton
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:src="@drawable/up_select"
        android:layout_marginTop="-70dp"
        android:layout_marginStart="325dp"

        >

    </ImageButton>
    <ImageButton
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:src="@drawable/down_select"
        android:layout_marginTop="40dp"
        android:layout_marginStart="325dp"

        >

    </ImageButton>
    <TextView
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:text="@string/add_to_default"
        android:layout_gravity="start"
        android:gravity="start"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textColor="@android:color/background_dark"
        >

    </TextView>

    <CheckBox
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_gravity="end"
        android:gravity="end"
        android:layout_marginTop="-40dp"
        android:layout_marginEnd="10dp"
        >

    </CheckBox>
    <Button
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/nTButton"
        android:textSize="24sp"
        android:textColor="@android:color/background_dark"

        >

    </Button>
</LinearLayout>