<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FridgeLanding">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/bot_nav_bar"
        android:layout_alignParentLeft="true"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Recipe Book"
            android:gravity="center_horizontal"></TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"></ImageView>

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@android:string/search_go"></EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:id="@+id/recipes">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/lasagna_text"
                android:drawableLeft="@drawable/lasagna2"
                android:gravity="center_horizontal">
            </Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/pbj_text"
                android:drawableLeft="@drawable/pbj2"
                android:textSize="18sp"
                android:gravity="center_horizontal">
            </Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/pbj2_text"
                android:drawableLeft="@drawable/pbj2"
                android:textSize="18sp"
                android:gravity="center_horizontal">
            </Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/grilled_cheese_text"
                android:drawableLeft="@drawable/cheese"
                android:textSize="18sp"
                android:gravity="center_horizontal">
            </Button>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:id="@+id/bot_nav_bar">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/list"
            android:layout_weight="1"
            android:id="@+id/grocery_list_button">

        </Button>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/fridge"
            android:layout_weight="1"
            android:id="@+id/fridge_button">

        </Button>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/book"
            android:layout_weight="1"
            android:id="@+id/recipe_book_button">

        </Button>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/settings"
            android:layout_weight="1"
            android:id="@+id/settings_button">

        </Button>
    </LinearLayout>



</RelativeLayout>